--- a/pg/Makefile
+++ b/pg/Makefile
@@ -1,10 +1,8 @@
 EXTENSION = wh_nagios
 DATA = wh_nagios--2.0.sql \
-       wh_nagios--1.1--2.0.sql
-#	wh_nagios--1.0.sql wh_nagios--1.0--1.1.sql \
-#	wh_nagios--1.1--1.0.sql wh_nagios--1.1.sql \
-#	wh_nagios--1.1--1.2.sql wh_nagios--1.2.sql \
-#	wh_nagios--1.2--1.1.sql
+	   wh_nagios--2.1.sql \
+       wh_nagios--1.1--2.0.sql \
+	   wh_nagios--2.0--2.1.sql
 
 PG_CONFIG = pg_config
 PGXS := $(shell $(PG_CONFIG) --pgxs)
