Upgrade script for wh_nagios from 1.1 to 2.0

--- a/pg/Makefile
+++ b/pg/Makefile
@@ -1,5 +1,6 @@
 EXTENSION = wh_nagios
-DATA = wh_nagios--2.0.sql
+DATA = wh_nagios--2.0.sql \
+       wh_nagios--1.1--2.0.sql
 #	wh_nagios--1.0.sql wh_nagios--1.0--1.1.sql \
 #	wh_nagios--1.1--1.0.sql wh_nagios--1.1.sql \
 #	wh_nagios--1.1--1.2.sql wh_nagios--1.2.sql \
