--- a/pg/Makefile
+++ b/pg/Makefile
@@ -1,8 +1,7 @@
 EXTENSION = wh_nagios
-DATA = wh_nagios--2.0.sql \
-	   wh_nagios--2.1.sql \
-       wh_nagios--1.1--2.0.sql \
-	   wh_nagios--2.0--2.1.sql
+DATA = wh_nagios--2.1.sql \
+	   wh_nagios--2.1--2.2.sql \
+	   wh_nagios--2.2.sql
 
 PG_CONFIG = pg_config
 PGXS := $(shell $(PG_CONFIG) --pgxs)
