pg: Add ability to merge two services.
pgTap tests updated.

--- a/pg/Makefile
+++ b/pg/Makefile
@@ -1,7 +1,9 @@
 EXTENSION = wh_nagios
 DATA = wh_nagios--2.2.sql \
 	   wh_nagios--2.2--2.3.sql \
-	   wh_nagios--2.3.sql
+	   wh_nagios--2.3.sql \
+	   wh_nagios--2.3--2.4.sql \
+	   wh_nagios--2.4.sql
 
 PG_CONFIG = pg_config
 PGXS := $(shell $(PG_CONFIG) --pgxs)
